This this the changelog file for the SoapyIris project.

Release 2018.01.0.1 (pending)
==========================

- Version update to match firmware from January 2018

Release 2017.11.0.2 (pending)
==========================

- Added read/writeStream loop support for full contiguous buffers

Release 2017.11.0.1 (pending)
==========================

- Initial commit of SoapyIris project and repo creation