@@ -3,6 +3,7 @@ This this the changelog file for the SoapyIris project.
 Release 2018.01.0.1 (pending)
 ==========================
 
+- try/catch for version parser in case of failure
 - Version update to match firmware from January 2018
 
 Release 2017.11.0.2 (pending)
